--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -5,38 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>My Site, Bitch</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li class="current-page">
-                    <a href="#">
+                <li>
+                    <a href="../index.html">
                         <!-- icon -->
                         <p>Home</p>
                     </a>
                 </li>
                 <li>
-                    <a href="./pages/about-me.html">
+                    <a href="./about-me.html">
                         <!-- icon -->
                         <p>About</p>
                     </a>
                 </li>
                 <li>
-                    <a href="./pages/skills.html">
+                    <a href="./skills.html">
                         <!-- icon -->
                         <p>Skills</p>
                     </a>
                 </li>
-                <li>
-                    <a href="./pages/portfolio.html">
+                <li class="current-page">
+                    <a href="#">
                         <!-- icon -->
                         <p>Portfolio</p>
                     </a>
                 </li>
                 <li>
-                    <a href="./pages/contact.html">
+                    <a href="./contact.html">
                         <!-- icon -->
                         <p>Contact</p>
                     </a>
@@ -47,12 +47,7 @@
             
         </section>
     </header>
-    <main class="home">
-        <p>Welcome to my portfolio!</p>
-        <h1>Lorem Ipsum</h1>
-        <p>My Name is <em>redacted</em>. I'm a Front End Web Developer</p>
-    </main>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
