--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,38 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>My Site, Bitch</title>
+    <title>Contact</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li class="current-page">
-                    <a href="#">
+                <li>
+                    <a href="../index.html">
                         <!-- icon -->
                         <p>Home</p>
                     </a>
                 </li>
                 <li>
-                    <a href="./pages/about-me.html">
+                    <a href="./about-me.html">
                         <!-- icon -->
                         <p>About</p>
                     </a>
                 </li>
                 <li>
-                    <a href="./pages/skills.html">
+                    <a href="./skills.html">
                         <!-- icon -->
                         <p>Skills</p>
                     </a>
                 </li>
                 <li>
-                    <a href="./pages/portfolio.html">
+                    <a href="./portfolio.html">
                         <!-- icon -->
                         <p>Portfolio</p>
                     </a>
                 </li>
-                <li>
-                    <a href="./pages/contact.html">
+                <li class="current-page">
+                    <a href="#">
                         <!-- icon -->
                         <p>Contact</p>
                     </a>
@@ -47,12 +47,24 @@
             
         </section>
     </header>
-    <main class="home">
-        <p>Welcome to my portfolio!</p>
-        <h1>Lorem Ipsum</h1>
-        <p>My Name is <em>redacted</em>. I'm a Front End Web Developer</p>
+    <main class="contact">
+        <h1>Contact</h1>
+        <h2>lorem ipsum dolor</h2>
+        <section class="content">
+            <p></p>
+            <p></p>
+            <p></p>
+        </section>
+        <form action="" class="contact-form">
+            <label for="name">Name:</label>
+            <input id="name" type="text">
+            <label for="email">Email</label>
+            <input type="text" id="email">
+            <label for="message">Message</label>
+            <textarea id="message" cols="30" rows="10"></textarea>
+        </form>
     </main>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
