did most media queries, need to figure out the sliding nav and apply js, also did other tweaking. im very sorry for the bad commit messages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&family=Lobster&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/5baaeeb670.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/styles.css">
     <title>My Site, Bitch</title>
@@ -47,22 +47,20 @@
                 </li>
             </ul>
         </nav>
-        <header>
-            <section class="home" id="home">
-                <h1>Welcome to my portfolio!</h1>
-                <p class="greeting">Lorem Ipsum</p>
-                <p>My Name is <em>Redacted</em>. I'm a Front End Web Developer</p>
-            </section>
+        <header class="home" id="home">
+            <h1>Welcome to my portfolio!</h1>
+            <p>My Name is <em>Redacted</em>. I'm a Front End Web Developer</p>
         </header>
         <main>
             <section class="about" id="about">
+                <img src="./assets/bear6.jpg" alt="bear6. that's all that needs to be said for those who will be viewing this site while its still so unfinished">
                 <h2>About Me</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At hic illum incidunt amet! In, assumenda eveniet praesentium cupiditate amet id!</p>
             </section>
     
             <section class="skills" id="skills">
                 <h2>Skills</h2>
-                <h3>lorem ipsum dolor</h3>
+                <p>lorem ipsum dolor</p>
                 <ul>
                     <li>
                         <i class="fab fa-html5" aria-hidden="true"></i>
@@ -117,19 +115,38 @@
                 <div class="portfolio-gallery">
                     <ul>
                         <li class="project">
-                            <h3>A Project Name!</h3>
+                            <h3>Restaurant Mall</h3>
+                            <div class="skills-used">
+                                <i class="fab fa-html5" aria-hidden="true"></i>
+                                <i class="fab fa-css3-alt" aria-hidden="true"></i>
+                                <i class="fab fa-sass" aria-hidden="true"></i>
+                                <p class="sr-only">HTML5, CSS3, Sass</p>
+                            </div>
+                            <p>Responsive multi-page site that advertises and promotes clients restaurants. Uses clean semantic HTML5 and SCSS/CSS3, to bring to life the clients proposed design.<p>
+                            <a href="https://inspiring-tesla-eccdb5.netlify.app/">View It Live!</a>
+                            <a href="https://github.com/MaxinePower/maxine-power-project-1">Check Out The Code!</a>
+                        </li>
+                        <li class="project">
+                            <h3>Spoiled Eggs: Bad Movie Generator</h3>
+                            <div class="skills-used">
+                                <i class="fab fa-html5" aria-hidden="true"></i>
+                                <i class="fab fa-css3-alt" aria-hidden="true"></i>
+                                <i class="fab fa-sass" aria-hidden="true"></i>
+                                <i class="fab fa-js-square" aria-hidden="true"></i>
+                                <p class="sr-only">HTML5, CSS3, Sass, JS</p>
+                            </div>
                             <p>a couple sentence long description of the project. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo laborum illum molestiae!</p>
-                            <a href="#">View It Live!</a>
-                            <a href="#">Check Out The Code!</a>
+                            <a href="https://spoiled-eggs-movies.netlify.app/">View It Live!</a>
+                            <a href="https://github.com/MaxinePower/project2">Check Out The Code!</a>
                         </li>
                         <li class="project">
                             <h3>A Project Name!</h3>
-                            <p>a couple sentence long description of the project. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo laborum illum molestiae!</p>
-                            <a href="#">View It Live!</a>
-                            <a href="#">Check Out The Code!</a>
-                        </li>
-                        <li class="project">
-                            <h3>A Project Name!</h3>
+                            <div class="skills-used">
+                                <i class="fab fa-html5" aria-hidden="true"></i>
+                                <i class="fab fa-css3-alt" aria-hidden="true"></i>
+                                <i class="fab fa-sass" aria-hidden="true"></i>
+                                <p class="sr-only">HTML5, CSS3, Sass</p>
+                            </div>
                             <p>a couple sentence long description of the project. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo laborum illum molestiae!</p>
                             <a href="#">View It Live!</a>
                             <a href="#">Check Out The Code!</a>
