added an event listener to the form so that i had something in my js file

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     </div>
                 </div>
     
-                <form action="" class="contact-form">
+                <form action="" class="contact-form" id="contact-form">
                     <div class="identity">
                         <label for="name" class="sr-only">Name:</label>
                         <input id="name" type="text" placeholder="Name">
