--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&family=Lobster&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/5baaeeb670.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>My Site, Bitch</title>
+    <title>My Site!</title>
 </head>
 <body>
     <div class="wrapper">
