removing lorem ipsum, adjusting media queries, and adding a max-width to skills

--- a/index.html
+++ b/index.html
@@ -55,12 +55,11 @@
             <section class="about" id="about">
                 <img src="./assets/bear6.jpg" alt="bear6. that's all that needs to be said for those who will be viewing this site while its still so unfinished">
                 <h2>About Me</h2>
-                <p>I am a Front-End Web Developer with experience building responsive sites using HTML5, CSS3, SCSS, JS, JQuery and React. I have a passion for accessibility in the tech industry and an avid interest in using and devloping my skills to make sites accessible to all users.</p>
+                <p>I am a Front-End Web Developer with experience building responsive sites using HTML5, CSS3, SCSS, JS, JQuery and React. I have a passion for accessibility in the tech industry and an avid interest in using and devloping my skills to make sure sites can be accessible to all users.</p>
             </section>
     
             <section class="skills" id="skills">
                 <h2>Skills</h2>
-                <p>lorem ipsum dolor</p>
                 <ul>
                     <li>
                         <i class="fab fa-html5" aria-hidden="true"></i>
@@ -94,6 +93,10 @@
                         <i class="fas fa-mobile-alt" aria-hidden="true"></i>
                         <p>Responsive Design</p>
                     </li>
+                    <!-- <li>
+                        icon for jQuery 
+                        <span class="sr-only">jQuery</span>
+                    </li> -->
                     <!-- <li>
                         icon currently unavailable on v5 fontawesome, may have to upgrade
                         <span class="sr-only">Firebase</span>
@@ -159,7 +162,7 @@
                 <div class="contact-info">
                     <div class="title">
                         <h2>Contact</h2>
-                        <p>lorem ipsum dolor</p>
+                        <p>Want to talk? Send me a message!</p>
                     </div>
                     <div class="my-links">
                         <a href="https://www.linkedin.com/in/maxine-power">
