updating href for restuaurant mall and fixing a mysterious wrapping issue on those buttons

--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                                 <i class="fab fa-sass" aria-hidden="true"></i>
                                 <p class="sr-only">HTML5, CSS3, Sass</p>
                             </div>
-                            <p>Responsive multi-page site that advertises and promotes clients restaurants. Uses clean semantic HTML5 and SCSS/CSS3, to bring to life the clients proposed design.<p>
-                            <a href="https://inspiring-tesla-eccdb5.netlify.app/">View It Live!</a>
+                            <p>Responsive multi-page site that advertises and promotes clients restaurants. Uses clean semantic HTML5 and SCSS/CSS3, to bring to life the clients proposed design.</p>
+                            <a href="https://restaurant-mall.netlify.app/">View It Live!</a>
                             <a href="https://github.com/MaxinePower/maxine-power-project-1">Check Out The Code!</a>
                         </li>
                     </ul>
