--- a/index.html
+++ b/index.html
@@ -117,6 +117,19 @@
                 <div class="portfolio-gallery">
                     <ul>
                         <li class="project">
+                            <h3>Pokémon Detective Game</h3>
+                            <div class="skills-used">
+                                <i class="fab fa-react" aria-hidden="true"></i>
+                                <i class="fab fa-html5" aria-hidden="true"></i>
+                                <i class="fab fa-css3-alt" aria-hidden="true"></i>
+                                <i class="fab fa-js-square" aria-hidden="true"></i>
+                                <p class="sr-only">React, HTML5, CSS3, JS</p>
+                            </div>
+                            <p>A game where the player solves crimes by selecting the best pokémon for the case. This React app uses data from the UK Police API and the Pokémon API.</p>
+                            <a href="https://detective-pokemon-game.netlify.app/">View It Live!</a>
+                            <a href="https://github.com/MaxinePower/detective-pokemon">Check Out The Code!</a>
+                        </li>
+                        <li class="project">
                             <h3>Kittens Galore: Image Generator</h3>
                             <div class="skills-used">
                                 <i class="fab fa-react" aria-hidden="true"></i>
